# unmute

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SWARM.md  bake_deploy_prod.sh  bake_deploy_staging.sh  docker-compose-single-gpu.yml  docker-compose.yml  fake-openai.py  pyproject.toml  setup_gpu_swarm_node.py  side-tool.py  stt_unmute_server_mlx.py  swarm-deploy.yml  voices.yaml
.github/workflows/: ci.yml
dockerless/: .gitignore  start_backend.sh  start_frontend.sh  start_llm.sh  start_stt.sh  start_tts.sh
docs/: browser_backend_communication.md
frontend/: README.md  hot-reloading.Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: mic-input-processor.js
frontend/src/: mdx-components.tsx
frontend/src/app/: ConsentModal.tsx  CookieConsent.tsx  CouldNotConnect.tsx  ErrorMessages.tsx  SlantedButton.tsx  SquareButton.tsx  Unmute.tsx  UnmuteConfigurator.tsx  UnmuteHeader.tsx  VoiceAttribution.tsx  VoiceButton.tsx  VoiceRecorder.tsx  VoiceUpload.tsx  chatHistory.ts  globals.css  layout.tsx  opus-recorder.d.ts  page.tsx  useAudioProcessor.ts  useBackendServerUrl.ts  useGoogleAnalytics.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  (+3 more)
notebooks/: create-voice-donation-sentences.ipynb
services/benchmark-llm/: Dockerfile  run_bench.sh
services/debugger/: Dockerfile
services/grafana/: Dockerfile  grafana.ini
services/moshi-server/: Dockerfile  private.Dockerfile  public.Dockerfile  pyproject.toml  start_moshi_server.sh  start_moshi_server_private.sh  start_moshi_server_public.sh
services/moshi-server/configs/: stt-prod.toml  stt.toml  tts-prod.toml  tts-py.toml  tts.toml  voice-cloning.toml
services/prometheus/: Dockerfile  prometheus.yml
tests/: test_exponential_moving_average.py  test_llm_utils.py
unmute/: audio_input_override.py  audio_stream_saver.py  cache.py  exceptions.py  kyutai_constants.py  main_gradio.py  main_websocket.py  metrics.py  openai_realtime_api_events.py  process_recording.py  quest_manager.py  recorder.py  service_discovery.py  unmute_handler.py  webrtc_utils.py
unmute/llm/: chatbot.py  llm_utils.py  newsapi.py  quiz_show_questions.py  system_prompt.py
unmute/loadtest/: dummy_tts_server.py  generate_dataset_for_vllm.py  loadtest_client.py  loadtest_result.py
unmute/scripts/: check_hugging_face_token_not_write.py  copy_voice_to_prod.py  example_websocket_client.py  mistral_streaming.py  output_from_file.py  output_sine.py  output_sine_async.py  output_tts.py  pitch_detection_handler.py  reply_on_pause_dummy.py  stt_example.py  stt_from_file_example.py  stt_microphone_example.py  tts_example.py  update_voice_list.py  vllm_async_hello_world.py  vllm_wrapper_example.py
unmute/stt/: dummy_speech_to_text.py  speech_to_text.py
unmute/tts/: freesound_download.py  realtime_queue.py  text_to_speech.py  voice_cloning.py  voice_donation.py  voice_donation_sentences.txt  voices.py
(+8 files in other folders)
