# This file and the uv.lock are taken from the moshi-rs repository.
# If they change in moshi-rs, they should be updated here as well.

[project]
name = "tts-python"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
   "moshi @ git+https://git@github.com/kyutai-labs/moshi.git#egg=moshi&subdirectory=moshi",
   "setuptools",
   "xformers",
   "pydantic",
   "julius",
   "torchaudio",
]